--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ p {
 
 .l-heading {
   font-size: 40px;
+  line-height: 1.2;
 }
 
 /* Padding */
@@ -112,7 +113,7 @@ p {
   color: #fff;
 }
 
-#navbar h1 {
+#navbar .logo {
   float: left;
   padding-top: 20px;
 }
@@ -162,7 +163,7 @@ p {
 /* Home Info */
 
 #home-info {
-  height: 400px;
+  height: 450px;
 }
 
 #home-info .info-img {
@@ -222,7 +223,7 @@ p {
 /* Testimonials */
 
 #testimonials {
-  height: 600px;
+  height: 100%;
   background: url(../img/test-bg.jpg) no-repeat center center/cover;
   padding-top: 100px;
 }
@@ -234,7 +235,7 @@ p {
 }
 
 #testimonials .testimonial {
-  padding: 40px 20px;
+  padding: 20px;
   margin-bottom: 40px;
   opacity: 0.8;
 }
